fix no tag spacing

--- a/src/views/Browse/Browse.scss
+++ b/src/views/Browse/Browse.scss
@@ -88,14 +88,19 @@
         @include body-m;
         color: $grey;
         margin-top: space(20);
+        margin-right: space(8);
 
         @include for-tablet-large-up {
           margin-right: space(16);
         }
+
+        @include for-phone-only {
+          margin-right: 0;
+        }
       }
 
       &--container {
-        margin-top: space(20);
+        margin: space(20) 0;
       }
     }
 
